# building_materials_rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  rebar.rs
src/concrete/: mod.rs  property.rs
src/standard/: mod.rs
src/standard/sp_63_13330_2018/: concrete.rs  mod.rs  rebar.rs
